fixed a bug with js not showing the default profile image avatar

--- a/staticfiles/css/dark-mode.css
+++ b/staticfiles/css/dark-mode.css
@@ -171,7 +171,17 @@ body.dark-mode .btn-primary:hover {
 }
 
 @media (max-width: 767.98px) {
+    body.dark-mode .navbar-toggler {
+        border-color: rgba(255, 255, 255, 0.1);
+    }
     body.dark-mode .navbar-toggler-icon {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    }
+}
+
+/* Ensure the background color for all devices in dark mode */
+@media (max-width: 767.98px), (min-width: 768px) {
+    body.dark-mode {
+        background-color: #121212;
     }
 }
